--- a/README.qmd
+++ b/README.qmd
@@ -8,7 +8,7 @@ format: gfm
 | Fecha        | Título                                                       |
 |--------------|--------------------------------------------------------------|
 | 02-octubre   | [Práctica 0: Introducción a `R`](./Practica0.html)           |
-| 07-octubre   | Práctica 1: Lectura y manejo de ficheros |
+| 07-octubre   | [Práctica 1: Lectura y manejo de ficheros](./Practica1.html) |
 | 16-octubre   | Práctica 2: Estadística descriptiva      |
 | 28-octubre   | Práctica 3: Contrastes paramétricos      |
 | 30-octubre   | Práctica repaso: Bloque I          |
